kubernetes/skywalker/application/freshrss/freshrss.virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService

metadata:
  name: freshrss

spec:
  gateways:
    - istio-system/feldman-in
  hosts:
    - freshrss.feldman.in
    - news.feldman.in
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: freshrss
            port:
              number: 80
